--- a/.dockerignore
+++ b/.dockerignore
@@ -1,34 +1,7 @@
-# Node modules
-node_modules
-
-# Build output
-.next
-out
-
-# Logs
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Dependency files
-package-lock.json
-yarn.lock
-
-# Environment files
-.env
-.env.local
-.env.development
-.env.production
-.env.test
-
-# Git and Docker
-.git
-.gitignore
+Dockerfile
 .dockerignore
-
-# VSCode settings
-.vscode
-
-# OS and system files
-.DS_Store
-Thumbs.db
+node_modules
+npm-debug.log
+README.md
+.next
+.git
